2003-07-25  H.J. Lu  <hongjiu.lu@intel.com>

	* config/obj-elf.c (obj_elf_change_section): Update
	elf_section_type and elf_section_flags only when they are
	specified.

2003-07-25  H.J. Lu  <hongjiu.lu@intel.com>

	* config/obj-elf.c (obj_elf_change_section): Always set section
	type and flags.

2003-07-25  H.J. Lu  <hongjiu.lu@intel.com>

	* config/obj-elf.c (special_sections): Removed.
	(obj_elf_change_section): Call _bfd_elf_get_sec_type_attr. Set
	elf_section_type and elf_section_flags.
	(elf_frob_file): Set SHT_GROUP.

	* config/obj-elf.h (obj_sec_set_private_data): New.

	* config/tc-alpha.h (ELF_TC_SPECIAL_SECTIONS): Removed.
	* config/tc-ia64.h: Likewise.
	* config/tc-m32r.h: Likewise.
	* config/tc-m68hc11.h: Likewise.
	* config/tc-mcore.h: Likewise.
	* config/tc-mips.h: Likewise.
	* config/tc-ppc.h: Likewise.
	* config/tc-sh64.h: Likewise.
	* config/tc-v850.h: Likewise.
	* config/tc-xtensa.h: Likewise.

	* config/tc-v850.h (SHF_V850_GPREL): Removed.
	(SHF_V850_EPREL): Likewise.
	(SHF_V850_R0REL): Likewise.

	* subsegs.c (subseg_get): Call obj_sec_set_private_data if it
	is defined.

2003-07-24  Stephane Carrez  <stcarrez@nerim.fr>

	* config/tc-m68hc11.h (DWARF2_ADDR_SIZE): Use 32-bit address for
	debugging symbols so that we handle page memory correctly.

2003-07-24  Nick Clifton  <nickc@redhat.com>

	* po/fr.po: Updated French translation.

2003-07-23  Daniel Jacobowitz  <drow@mvista.com>

	* config/tc-arm.c (arm_archs): Add iwmmxt.

2003-07-22  H.J. Lu <hongjiu.lu@intel.com>
 
	* read.c (do_parse_cons_expression): Mark nbytes unused to
	silence gcc.

2003-07-22  Alexandre Oliva  <aoliva@redhat.com>

	* config/tc-h8300.c (get_specific): No PCREL8 encoding for bsr/bc
	or bsr/bs.

	* config/tc-h8300.c (md_assemble): Make sure characters after
	slash and dot are lower-case.

2003-07-17  Nick Clifton  <nickc@redhat.com>

	* po/es.po: New Spanish translation.
	* po/tr.po: New Turkish translation.
	* po/opcodes.pot: Regenerate.
