@@ -1,3 +1,15 @@
+2003-07-28  Rainer Orth  <ro@TechFak.Uni-Bielefeld.DE>
+
+	* config/tc-mips.c (mips_flag_pdr): Define.
+	(md_begin) [OBJ_ELF]: Use it to control .pdr creation.
+	(s_mips_end) [OBJ_ELF]: Likewise.
+	(md_longopts) [OBJ_ELF]: Define OPTION_PDR, OPTION_NO_PDR.
+	(md_parse_option) [OBJ_ELF]: Handle them.
+	(md_show_usage) [OBJ_ELF]: Document -mpdr, -mno-pdr.
+
+	* doc/c-mips.texi (MIPS Opts): Document -mpdr, -mno-pdr.
+	* doc/as.texinfo (Overview) [MIPS]: Likewise.
+
 2003-07-25  H.J. Lu  <hongjiu.lu@intel.com>
 
 	* config/obj-elf.c (obj_elf_change_section): Update
